Adjusted colors for divs and cards - corrected css for index page

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     </div>
     <div class="row">
     <!-- Velocity Card-->
-    <div class="col-xs-12 col-sm-6 col-md-4 div3">
-    <div class="card">
-  <img class="card-img-top img-responsive" src="assets/images/card-images/velocity.png" alt="Input Velocity Image">
+    <div class="col-lg-4 div3">
+    <div class="card shadow">
+  <img class="card-img-top img-fluid" src="assets/images/card-images/velocity.png" alt="Input Velocity Image">
   <div class="card-body">
     <h5 class="card-title">Initial Velocity (m/s) <a tabindex="0" 
           class="btn btn-link" 
@@ -97,9 +97,9 @@
 </div>
 
 <!-- Yellow light phase card-->
-<div class="col-xs-12 col-sm-6 col-md-4 div3">
-    <div class="card">
-  <img class="card-img-top img-responsive" src="assets/images/card-images/yellow.png" alt="Input Yellow Light Phase Image">
+<div class="col-lg-4 div3">
+    <div class="card shadow">
+  <img class="card-img-top img-fluid" src="assets/images/card-images/yellow.png" alt="Input Yellow Light Phase Image">
   <div class="card-body">
     <h5 class="card-title">Yellow Phase (s) <a tabindex="0" 
           class="btn btn-link" 
@@ -118,9 +118,9 @@
 </div>
 
 <!-- Interphase card-->
-<div class="col-xs-12 col-sm-6 col-md-4 div3">
-    <div class="card">
-  <img class="card-img-top img-responsive" src="assets/images/card-images/red.png" alt="Input Interphase Image">
+<div class="col-lg-4 div3">
+    <div class="card shadow">
+  <img class="card-img-top img-fluid" src="assets/images/card-images/red.png" alt="Input Interphase Image">
   <div class="card-body">
     <h5 class="card-title">Interphase (s) <a tabindex="0" 
           class="btn btn-link" 
@@ -152,9 +152,9 @@
     </div>
     <div class="row">
     <!-- Reaction Time Card-->
-    <div class="col-xs-12 col-sm-6 col-md-4 div3">
-    <div class="card">
-  <img class="card-img-top img-responsive" src="assets/images/card-images/stopwatch.png" alt="Input Reaction Time Image">
+    <div class="col-lg-4 div3">
+    <div class="card shadow">
+  <img class="card-img-top img-fluid" src="assets/images/card-images/stopwatch.png" alt="Input Reaction Time Image">
   <div class="card-body">
     <h5 class="card-title">Reaction Time (s) <a tabindex="0" 
           class="btn btn-link" 
@@ -175,9 +175,9 @@
 </div>
 </div>
 <!-- Coefficient of friction Card-->
-    <div class="col-xs-12 col-sm-6 col-md-4 div3">
-    <div class="card">
-  <img class="card-img-top img-responsive" src="assets/images/card-images/friction.png" alt="Input Coefficient of Friction">
+    <div class="col-lg-4 div3">
+    <div class="card shadow">
+  <img class="card-img-top img-fluid" src="assets/images/card-images/friction.png" alt="Input Coefficient of Friction">
   <div class="card-body">
     <h5 class="card-title">Coeff. of Friction (μ) <a tabindex="0" 
           class="btn btn-link" 
@@ -198,9 +198,9 @@
 </div>
 
 <!-- intersection Distance Card-->
-    <div class="col-xs-12 col-sm-6 col-md-4 div3">
-    <div class="card">
-  <img class="card-img-top img-responsive" src="assets/images/card-images/intersection.png" alt="Input Intersection Distance">
+    <div class="col-lg-4 div3">
+    <div class="card shadow">
+  <img class="card-img-top img-fluid" src="assets/images/card-images/intersection.png" alt="Input Intersection Distance">
   <div class="card-body">
     <h5 class="card-title">Intersection Dist. (m) <a tabindex="0" 
           class="btn btn-link" 
@@ -236,12 +236,12 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-4 div3">
+      <div class="col-lg-4 div3">
       </div>
      <!-- Vehicle Length Card-->
-    <div class="col-xs-12 col-sm-6 col-md-4 div3">
-    <div class="card">
-  <img class="card-img-top img-responsive" src="assets/images/card-images/length.png" alt="Input Vehicle Length">
+    <div class="col-lg-4 div3">
+    <div class="card shadow">
+  <img class="card-img-top img-fluid" src="assets/images/card-images/length.png" alt="Input Vehicle Length">
   <div class="card-body">
     <h5 class="card-title">Vehicle Length (m) <a tabindex="0" 
           class="btn btn-link" 
@@ -259,7 +259,7 @@
   </div>
 </div>
     </div>
-      <div class="col-xs-12 col-sm-6 col-md-4 div3">
+      <div class="col-lg-4 div3">
 
       </div>
     </div>
