Added emailjs functionality to contact form

--- a/contact.html
+++ b/contact.html
@@ -1,109 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--Bootstrap CDN-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-<!--Fontawesome CDN-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" />
-<!--Hover.css CDN-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" />        
-<!--Favicon-->
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-<!--Link to custom style sheet-->
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    
-    <title>Physics Code</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--Bootstrap CDN-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <!--Fontawesome CDN-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" />
+  <!--Hover.css CDN-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" />
+  <!--Favicon-->
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <!--Link to custom style sheet-->
+  <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+   
+  <title>Physics Code</title>
 </head>
+
 <body>
-<header>
-<!-- Logo and text in Navbar-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">
-    <img src="assets/images/logo-1.png" width="30" height="30" class="d-inline-block align-top" alt="Physics Code Logo" loading="lazy">
-    Physics Code
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="help.html">Help</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
-      </li>
-      </ul>
-      <span class="navbar-text">
-      Don't let physics control you - take control of physics!
-    </span>
-  </div>
-</nav>
+  <header>
+    <!-- Logo and text in Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-info no-gutters">
+      <a class="navbar-brand" href="index.html">
+        <img src="assets/images/logo-main.png" width="30" height="30" class="d-inline-block align-top" alt="Physics Code Logo" loading="lazy">
+        Physics Code
+      </a>
+      <button 
+      class="navbar-toggler" 
+      type="button" data-toggle="collapse" 
+      data-target="#navbarNav" 
+      aria-controls="navbarNav" 
+      aria-expanded="false" 
+      aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link nav-text" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nav-text" href="help.html">Help</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link nav-text" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+        <span class="navbar-text">
+          Don't let physics control you - take control of physics!
+        </span>
+      </div>
+    </nav>
+  </header>
+ <section>
+    <div class="container div1">
+      <h1>Contact Us</h1>
+      <p class="head-text">Feel free to drop us an email and tell us about the type of calculators you'd like to see appear on our site. Just fill out
+      the form below.</p>
+      <p class="head-text">We're set up to accomodate multiple calculators for various physics principles and while we're just starting out, 
+      you may have some ideas that you'd like us to work on for the next calculator.</p>
+      <p class="head-text my-0">Our goal at Physics Code is to keep all our calculators free and set up in a logical order in large cards with 
+      symbols highlighting the variable required. We look forward to helping you through your physics courses at school and university.</p><br>
+    </div>
+  </section>
+   <section class="container">
 
-</header>
-<section>
-<h1>This is a heading - Contact</h1>
-</section>
- <!-- Footer -->
-<footer class="page-footer font-small darken-3">
-
-  <!-- Footer Elements -->
-  <div class="container">
-
-    <!-- Grid row-->
-    <div class="row">
-
-      <!-- Grid column -->
-      <div class="col-md-12 py-5">
-        <div class="mb-5 text-center">
-
-          <!-- Facebook -->
-          <a class="fb-icon" href="https://www.facebook.com" target="_blank">
-            <i class="fab fa-facebook-f fa-lg mr-md-5 mr-3 fa-2x"></i>
-          </a>
-          <!-- Twitter -->
-          <a class="tw-icon" href="https://www.twitter.com" target="_blank">
-            <i class="fab fa-twitter fa-lg mr-md-5 mr-3 fa-2x"></i>
-          </a>
-          <!--Linkedin -->
-          <a class="li-icon" href="https://www.linkedin.com" target="_blank">
-            <i class="fab fa-linkedin-in fa-lg mr-md-5 mr-3 fa-2x"></i>
-          </a>
-          <!--Instagram-->
-          <a class="ins-icon" href="https://www.instagram.com" target="_blank">
-            <i class="fab fa-instagram fa-lg mr-md-5 mr-3 fa-2x"></i>
-          </a>
-          <!--Pinterest-->
-          <a class="pin-icon" href="https://www.pintrest.com" target="_blank">
-            <i class="fab fa-pinterest fa-lg fa-2x"></i>
-          </a>
+      <div class="row">
+        <div class="col-12 div2">
+          <h2>Send us a message</h2>
+          <p class="card-text">
+            Let us know what type of improvements or calculators you'd like to see in our next release of Physics Code.
+          </p>
         </div>
       </div>
-      <!-- Grid column -->
+      <form id="user_request" method="post">
+      <div class="row">
+        <!-- Email Form-->
+        <div class="col-12 div3">
+<div class="form-group">
+    <label for="intputName">Your name</label>
+    <input type="text" class="form-control" name="from_name" id="inputName" placeholder="Enter your name" required>
+    <label for="intputEmailAddress">Email address</label>
+    <input type="email" class="form-control" name="from_email" id="inputEmailAddress" placeholder="Enter your email address" required>
+    <small id="emailHelp">We'll never share your email with anyone else.</small>
+  </div>
+  <div class="form-group">
+    <label for="message">Message</label>
+    <textarea rows="10" name="calculator_request" class="form-control" id="userRequest" placeholder="Input your suggestions" required></textarea>
+  </div>
+  
+  <div class="row">
+  <div class="col-12 div2">
+  <button class="btn btn-success btn--padding">Submit</button>
+  </div>
+  </div>
+        </div>
+      </div>
+      </form>
+
+   </section>
+ <!-- Footer -->
+  <footer class="page-footer font-small darken-3">
+
+    <!-- Footer Elements -->
+    <div class="container">
+
+      <!-- Grid row-->
+      <div class="row">
+
+        <!-- Grid column -->
+        <div class="col-md-12 py-5">
+          <div class="mb-5 text-center">
+
+            <!-- Facebook -->
+            <a class="fb-icon" href="https://www.facebook.com" target="_blank">
+              <i class="fab fa-facebook-f fa-lg mr-md-5 mr-3 fa-2x"></i>
+            </a>
+            <!-- Twitter -->
+            <a class="tw-icon" href="https://www.twitter.com" target="_blank">
+              <i class="fab fa-twitter fa-lg mr-md-5 mr-3 fa-2x"></i>
+            </a>
+            <!--Linkedin -->
+            <a class="li-icon" href="https://www.linkedin.com" target="_blank">
+              <i class="fab fa-linkedin-in fa-lg mr-md-5 mr-3 fa-2x"></i>
+            </a>
+            <!--Instagram-->
+            <a class="ins-icon" href="https://www.instagram.com" target="_blank">
+              <i class="fab fa-instagram fa-lg mr-md-5 mr-3 fa-2x"></i>
+            </a>
+            <!--Pinterest-->
+            <a class="pin-icon" href="https://www.pinterest.com" target="_blank">
+              <i class="fab fa-pinterest fa-lg fa-2x"></i>
+            </a>
+          </div>
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row-->
 
     </div>
-    <!-- Grid row-->
+    <!-- Footer Elements -->
 
-  </div>
-  <!-- Footer Elements -->
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+      <a href="https://index.html">Physics Code</a>
+    </div>
+    <!-- Copyright -->
 
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://index.html">Physics Code</a>
-  </div>
-  <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
 
-</footer>
-<!-- Footer -->
-    
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" ></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" ></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" ></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+  <script type="text/javascript">
+   (function(){
+      emailjs.init("user_4M0aY6Qk6YuN226ZoNGhW");
+   })();
+</script>
+  <script src="assets/scripts/sendemail.js"></script>
+  <script src="assets/scripts/dependencies.js"></script>
+
 </body>
+
 </html>
