--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
   <section>
     <div class="container div1">
       <h1>Dilemma Zone Calculator</h1>
-      <p class="lead">Add your variables to the calculator - you will need to supply all the variables before being able to
-        calculate whether or not a dilemma zone exists.</p>
-      <p class="lead">If a dilemma zone exists, the output will show you the distance from the traffic light stop line and
+      <p class="head-text">Add your variables to the calculator - you will need to supply all the variables before being able to
+        calculate whether or not a dilemma zone exists. If you need some hints or want to try to calculate yourself, check our <a href="help.html"> help</a> page.</p>
+      <p class="head-text">If a dilemma zone exists, the output will show you the distance from the traffic light stop line and
         the size of the dilemma zone.</p>
-      <p class="lead my-0">The other possibility is that an option zone exists, this will be displayed as a distance from
+      <p class="head-text my-0">The other possibility is that an option zone exists, this will be displayed as a distance from
         the traffic light stop line and the size of the option zone will also be given.</p><br>
     </div>
   </section>
@@ -82,7 +82,7 @@
           <div class="card shadow">
             <img class="card-img-top img-fluid" src="assets/images/card-images/velocity.png" alt="Input Velocity Image">
             <div class="card-body">
-              <h5 class="card-title">Initial Velocity (m/s) 
+              <h5 class="card-title">Velocity (m/s) 
               <a 
               tabindex="0" 
               class="btn btn-link" 
@@ -233,7 +233,7 @@
           <div class="card shadow">
             <img class="card-img-top img-fluid" src="assets/images/card-images/friction.png" alt="Input Coefficient of Friction">
             <div class="card-body">
-              <h5 class="card-title">Coeff. of Friction (μ) 
+              <h5 class="card-title">Friction (μ) 
               <a 
               tabindex="0" 
               class="btn btn-link" 
@@ -436,7 +436,7 @@
               <i class="fab fa-instagram fa-lg mr-md-5 mr-3 fa-2x"></i>
             </a>
             <!--Pinterest-->
-            <a class="pin-icon" href="https://www.pintrest.com" target="_blank">
+            <a class="pin-icon" href="https://www.pinterest.com" target="_blank">
               <i class="fab fa-pinterest fa-lg fa-2x"></i>
             </a>
           </div>
