Added game page with reaction timer to be scripted

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <a class="nav-link nav-text" href="help.html">Help</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link nav-text" href="game.html">Game</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link nav-text" href="contact.html">Contact</a>
           </li>
         </ul>
