--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <!--Link to custom style sheet-->
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-   
+
   <title>Physics Code</title>
 </head>
 
@@ -40,11 +40,11 @@
           <li class="nav-item">
             <a class="nav-link nav-text" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link nav-text" href="help.html">Help</a>
-          </li>
           <li class="nav-item active">
-            <a class="nav-link nav-text" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+            <a class="nav-link nav-text" href="help.html">Help <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nav-text" href="contact.html">Contact</a>
           </li>
         </ul>
         <span class="navbar-text">
@@ -53,53 +53,57 @@
       </div>
     </nav>
   </header>
- <section>
+<section>
     <div class="container div1">
-      <h1>Contact Us</h1>
-      <p class="head-text">Feel free to drop us an email and tell us about the type of calculators you'd like to see appear on our site. Just fill out
-      the form below.</p>
-      <p class="head-text">We're set up to accomodate multiple calculators for various physics principles and while we're just starting out, 
-      you may have some ideas that you'd like us to work on for the next calculator.</p>
-      <p class="head-text my-0">Our goal at Physics Code is to keep all our calculators free and set up in a logical order for your convenience. We use large cards and  
-      symbols to help highlight the variable required. We look forward to helping you through your physics courses at school and university.</p><br>
+      <h1>Reaction Time Game</h1>
+      <p class="head-text">If you're wanting to test your reaction time for the calculator, you can do so here by playing this game. The rules are very straight forward,
+      but for the most accurate results, try and follow the rules as closely as possible.</p>
+      <p class="head-text">Because we're dealing with reaction times between the pedals in a car, this test done by hand and mouse or touch screen may not give an 
+      accurate representation of reaction. This game is more for testing your reaction time as an estimate only.</p>
+      <p class="head-text my-0">Reaction times will vary with age, tiredness, distractions, impairment with alcohol or drugs and many other reasons.</p><br>
     </div>
   </section>
-   <section class="container">
-
-      <div class="row">
+  <section class="container">
+   <div class="row">
         <div class="col-12 div2">
-          <h2>Send us a message</h2>
+          <h2>Test your reaction time!</h2>
           <p class="card-text">
-            Let us know what type of improvements or calculators you'd like to see in our next release of Physics Code.
+            Click the "start" button and then move your hand at least 20 cm from the mouse. When you start, the lamp will turn green. When the lamp turns red, 
+            click the "Brake" button. Make sure you have not moved the mouse from the start. A timer will show how long it took for you to push the brakes. 
           </p>
         </div>
       </div>
-      <form id="user_request" method="post">
-      <div class="row">
-        <!-- Email Form-->
-        <div class="col-12 div3">
-<div class="form-group">
-    <label for="intputName">Your name</label>
-    <input type="text" class="form-control" name="from_name" id="inputName" placeholder="Enter your name" required>
-    <label for="intputEmailAddress">Email address</label>
-    <input type="email" class="form-control" name="from_email" id="inputEmailAddress" placeholder="Enter your email address" required>
-    <small id="emailHelp">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="message">Message</label>
-    <textarea rows="10" name="calculator_request" class="form-control" id="userRequest" placeholder="Input your suggestions" required></textarea>
-  </div>
-  
-  <div class="row">
-  <div class="col-12 div2 text-center">
-  <button class="btn btn-success btn-lg btn--padding">Submit</button>
-  </div>
-  </div>
+  </section>
+  <div class="container">
+ <div class="row">
+        <div class="col-lg-4 div3">
+        </div>
+        <!-- Vehicle Length Card-->
+        <div class="col-lg-4 div3">
+          <div class="card shadow">
+          <div class="container text-center">
+            <span id="redLightStart" class="red_light_icon"><br><i class="fas fa-lightbulb fa-7x"></i></span>
+            <span id="greenLightStop" class="icon_hide_greenLight green_light_icon"><br><i class="fas fa-lightbulb fa-7x"></i></span>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Push Start 
+              </h5>
+              <br>
+              <div class="container text-center">
+            <button  
+            class="btn btn-danger btn-lg btn--padding" 
+            onclick="makeGreen()"
+            >Start</button>
+            
+</div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 div3">
         </div>
       </div>
-      </form>
+</div>
 
-   </section>
  <!-- Footer -->
   <footer class="page-footer font-small darken-3">
 
@@ -130,7 +134,7 @@
               <i class="fab fa-instagram fa-lg mr-md-5 mr-3 fa-2x"></i>
             </a>
             <!--Pinterest-->
-            <a class="pin-icon" href="https://www.pinterest.com" target="_blank">
+            <a class="pin-icon" href="https://www.pintrest.com" target="_blank">
               <i class="fab fa-pinterest fa-lg fa-2x"></i>
             </a>
           </div>
@@ -156,13 +160,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
-  <script type="text/javascript">
-   (function(){
-      emailjs.init("user_4M0aY6Qk6YuN226ZoNGhW");
-   })();
-</script>
-  <script src="assets/scripts/sendemail.js"></script>
+  <script src="assets/scripts/game.js"></script>
   <script src="assets/scripts/dependencies.js"></script>
 
 </body>
