--- a/game.html
+++ b/game.html
@@ -91,9 +91,14 @@
               <br>
               <div class="container text-center">
             <button  
-            class="btn btn-danger btn-lg btn--padding" 
-            onclick="makeGreen()"
+            class="btn btn-danger btn-lg btn--padding"
+            id="start_button" 
+            onclick="makeGreen(); setTimerAmount()"
             >Start</button>
+            <button
+            class="btn btn-danger btn-lg btn--padding btn_hide_brakes"
+            id="brake_button"
+            >Brakes</button> 
             
 </div>
             </div>
