--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,9 @@
           <li class="nav-item">
             <a class="nav-link nav-text" href="help.html">Help</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link nav-text" href="game.html">Game</a>
+          </li>
           <li class="nav-item active">
             <a class="nav-link nav-text" href="contact.html">Contact <span class="sr-only">(current)</span></a>
           </li>
