--- a/game.html
+++ b/game.html
@@ -40,8 +40,11 @@
           <li class="nav-item">
             <a class="nav-link nav-text" href="index.html">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link nav-text" href="help.html">Help</a>
+          </li>
           <li class="nav-item active">
-            <a class="nav-link nav-text" href="help.html">Help <span class="sr-only">(current)</span></a>
+            <a class="nav-link nav-text" href="game.html">Game <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-text" href="contact.html">Contact</a>
