--- a/game.html
+++ b/game.html
@@ -81,7 +81,7 @@
  <div class="row">
         <div class="col-lg-4 div3">
         </div>
-        <!-- Vehicle Length Card-->
+        <!-- Reaction Time Game Card-->
         <div class="col-lg-4 div3">
           <div class="card shadow">
           <div class="container text-center">
@@ -89,7 +89,7 @@
             <span id="greenLightStop" class="icon_hide_greenLight green_light_icon"><br><i class="fas fa-lightbulb fa-7x"></i></span>
             </div>
             <div class="card-body">
-              <h5 class="card-title">Push Start 
+              <h5 class="card-title heading-center">Push the Start button
               </h5>
               <br>
               <div class="container text-center">
@@ -102,7 +102,7 @@
             class="btn btn-danger btn-lg btn--padding btn_hide_brakes"
             id="brake_button"
             >Brakes</button>
-            <p id="time"></p> 
+             
             
 </div>
             </div>
@@ -111,6 +111,23 @@
         <div class="col-lg-4 div3">
         </div>
       </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="reaction_time_output" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="reaction_time_header">Your Reaction Time...</h5>
+        </div>
+      <div class="modal-body">
+       <p id="time"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="restart_test" onclick="reset_timer()" class="btn btn-secondary" data-dismiss="modal">Reset</button>
+      </div>
+    </div>
+  </div>
 </div>
 
  <!-- Footer -->
