Fixed issue of modal opening on reload

--- a/game.html
+++ b/game.html
@@ -114,7 +114,7 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="reaction_time_output" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal hide fade" id="reaction_time_output"  data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
