--- a/game.html
+++ b/game.html
@@ -114,14 +114,14 @@
 </div>
 
 <!-- Modal -->
-<div class="modal hide fade" id="reaction_time_output"  data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="reaction_time_output"  data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="reaction_time_header">Your Reaction Time...</h5>
+        <h5 class="modal-title" id="reaction_time_header">Your Reaction Time...</h5><i class="fas fa-stopwatch fa-2x"></i>
         </div>
       <div class="modal-body">
-       <p id="time"></p>
+       <p class="reaction_time_text" id="time"></p>
       </div>
       <div class="modal-footer">
         <button type="button" id="restart_test" onclick="reset_timer()" class="btn btn-secondary" data-dismiss="modal">Reset</button>
